--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <u>Ada garis di bawah</u>
         <i>Ihh tulisannya miring</i>
 
+        <a href="data.html">
+            <button type="button">ke Datanya</button>
+        </a>
         <a href="input.html">
             <button type="button">Input ah</button>
         </a>
