--- a/data.html
+++ b/data.html
@@ -69,7 +69,11 @@
          
 </body>
 <br />
-<button class="back-btn" type="button">Back</button>
-<button class="input-btn" type="button">Input</button>
+<a href="index.html">
+    <button class="back-btn">Home</button>
+</a>
+<a href="input.html">
+    <button class="input-btn">Input ah</button>
+</a>
 
 </html
