--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Hello World</title>
+        <link rel="stylesheet" href="assets/style.css">
     </head>
     <syle>
         
@@ -31,10 +32,10 @@
         <i>Ihh tulisannya miring</i>
 
         <a href="data.html">
-            <button type="button">ke Datanya</button>
+            <button class="back-btn">ke Datanya</button>
         </a>
         <a href="input.html">
-            <button type="button">Input ah</button>
+            <button class="input-btn">Input ah</button>
         </a>
     </body>
 </html>
